Refactoring. History still not working correctly.

--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -199,6 +199,7 @@
     <ClInclude Include="EvoHistorySys.h" />
     <ClInclude Include="EvoModelData.h" />
     <ClInclude Include="EvoNextGenFunctor.h" />
+    <ClInclude Include="HistAllocThread.h" />
     <ClInclude Include="win32_evoHistWindow.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -223,6 +224,7 @@
   <ItemGroup>
     <ClCompile Include="EvoGenerationCmd.cpp" />
     <ClCompile Include="Evolution.cpp" />
+    <ClCompile Include="HistAllocThread.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
