Refactoring. HistAllocThread moved to Win32_history. Running but History not ok.

--- a/Win32_history/Win32_history.vcxproj.filters
+++ b/Win32_history/Win32_history.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="win32_histWindow.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="HistAllocThread.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
@@ -42,6 +45,9 @@
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="win32_histWindow.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="HistAllocThread.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
