--- a/Win32_history/Win32_history.vcxproj
+++ b/Win32_history/Win32_history.vcxproj
@@ -141,6 +141,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="HistAllocThread.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="win32_askHistoryCut.h" />
@@ -148,6 +149,7 @@
     <ClInclude Include="win32_histWindow.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="HistAllocThread.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
