--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -72,26 +72,26 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Debug;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>BuildCompile</CustomBuildAfterTargets>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Debug;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x64;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>
     </CustomBuildAfterTargets>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\Release;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Lib\x86;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>BuildCompile</CustomBuildAfterTargets>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <LinkIncremental>false</LinkIncremental>
-    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
+    <IncludePath>$(SolutionDir)Direct3D;$(SolutionDir)Utilities;$(SolutionDir)HistoryInterface;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)Evolution;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvoHistGlue;$(SolutionDir)runtimeCPP;C:\Program Files (x86)\Microsoft DirectX SDK (June 2010)\Include;$(IncludePath)</IncludePath>
     <LibraryPath>$(SolutionDir)\x64\Release;C:\Program Files %28x86%29\Microsoft DirectX SDK %28June 2010%29\Lib\x64;$(LibraryPath)</LibraryPath>
     <CustomBuildAfterTargets>
     </CustomBuildAfterTargets>
@@ -108,7 +108,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>call $(SolutionDir)lin.bat $(ProjectDir)*.cpp</Command>
@@ -128,7 +128,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9d.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
@@ -155,7 +155,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>call $(SolutionDir)lin.bat $(ProjectDir)*.cpp</Command>
@@ -179,7 +179,7 @@
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
-      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>ComCtl32.lib;msimg32.lib;d3d9.lib;d3dx9.lib;runtimeCPP.lib;Direct3D.lib;EvolutionCore.lib;EvoHistGlue.lib;History.lib;Utilities.lib;Win32_utilities.lib;Win32_history.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
     <CustomBuildStep>
       <Command>
@@ -194,12 +194,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="EvoGenerationCmd.h" />
     <ClInclude Include="Evolution.h" />
-    <ClInclude Include="EvoHistorySys.h" />
-    <ClInclude Include="EvoModelData.h" />
-    <ClInclude Include="EvoNextGenFunctor.h" />
-    <ClInclude Include="win32_evoHistWindow.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -213,7 +208,6 @@
     <ClInclude Include="win32_frameBuffer.h" />
     <ClInclude Include="win32_gridWindow.h" />
     <ClInclude Include="win32_focusPoint.h" />
-    <ClInclude Include="win32_histWorkerThread.h" />
     <ClInclude Include="win32_histWrappers.h" />
     <ClInclude Include="win32_statistics.h" />
     <ClInclude Include="win32_status.h" />
@@ -221,7 +215,6 @@
     <ClInclude Include="win32_wrappers.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="EvoGenerationCmd.cpp" />
     <ClCompile Include="Evolution.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -236,11 +229,8 @@
     <ClCompile Include="win32_draw.cpp" />
     <ClCompile Include="win32_editor.cpp" />
     <ClCompile Include="win32_editorWrappers.cpp" />
-    <ClCompile Include="EvoHistorySys.cpp" />
-    <ClCompile Include="win32_evoHistWindow.cpp" />
     <ClCompile Include="win32_frameBuffer.cpp" />
     <ClCompile Include="win32_gridWindow.cpp" />
-    <ClCompile Include="win32_histWorkerThread.cpp" />
     <ClCompile Include="win32_histWrappers.cpp" />
     <ClCompile Include="win32_statistics.cpp" />
     <ClCompile Include="win32_status.cpp" />
