--- a/HistoryInterface/HistoryInterface.vcxproj
+++ b/HistoryInterface/HistoryInterface.vcxproj
@@ -146,6 +146,7 @@
     <ClInclude Include="HistoryGeneration.h" />
     <ClInclude Include="historyIterator.h" />
     <ClInclude Include="HistorySystem.h" />
+    <ClInclude Include="NextGenFunctor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
