--- a/History/History.vcxproj
+++ b/History/History.vcxproj
@@ -154,7 +154,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="genCmdList.h" />
+    <ClInclude Include="generationCmd.h" />
     <ClInclude Include="historyCache.h" />
+    <ClInclude Include="HistorySystemImpl.h" />
     <ClInclude Include="hist_slot.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -164,6 +166,7 @@
     <ClCompile Include="historyCache.cpp" />
     <ClCompile Include="historyIterator.cpp" />
     <ClCompile Include="HistorySystem.cpp" />
+    <ClCompile Include="HistorySystemImpl.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
