--- a/HistoryInterface/HistoryInterface.vcxproj
+++ b/HistoryInterface/HistoryInterface.vcxproj
@@ -141,12 +141,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="HistCacheItem.h" />
-    <ClInclude Include="generationCmd.h" />
     <ClInclude Include="HistoryGeneration.h" />
     <ClInclude Include="historyIterator.h" />
     <ClInclude Include="HistorySystem.h" />
-    <ClInclude Include="NextGenFunctor.h" />
+    <ClInclude Include="ModelData.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
