HistoryTest so far ok. Evolution is running, but History not ok.

--- a/EvolutionCore/EvolutionCore.vcxproj.filters
+++ b/EvolutionCore/EvolutionCore.vcxproj.filters
@@ -63,7 +63,7 @@
     <ClInclude Include="EditorState.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="ModelDataImpl.h">
+    <ClInclude Include="EvolutionModelDataImpl.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
