--- a/EvolutionCore/EvolutionCore.vcxproj
+++ b/EvolutionCore/EvolutionCore.vcxproj
@@ -168,7 +168,7 @@
     <ClInclude Include="grid_model.h" />
     <ClInclude Include="individual.h" />
     <ClInclude Include="interaction.h" />
-    <ClInclude Include="ModelDataImpl.h" />
+    <ClInclude Include="EvolutionModelDataImpl.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="strategy.h" />
     <ClInclude Include="targetver.h" />
