--- a/Evolution/WindowConfiguration1.cnf
+++ b/Evolution/WindowConfiguration1.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_HIST_WINDOW 0 988 1920 30
+MoveWindow IDM_HIST_WINDOW 607 949 1280 30
 ShowWindow IDM_HIST_WINDOW SW_SHOW
-MoveWindow IDM_MAIN_WINDOW 0 43 1920 945
+MoveWindow IDM_MAIN_WINDOW 607 67 1280 882
 ShowWindow IDM_MAIN_WINDOW SW_SHOW
-MoveWindow IDM_APPL_WINDOW -8 -8 1936 1056
+MoveWindow IDM_APPL_WINDOW 599 16 1296 993
 ShowWindow IDM_APPL_WINDOW SW_SHOW
 MoveWindow IDM_DISP_WINDOW 1692 202 211 219
 ShowWindow IDM_DISP_WINDOW SW_SHOW
 MoveWindow IDM_EDIT_WINDOW 1691 431 211 559
 ShowWindow IDM_EDIT_WINDOW SW_SHOW
-MoveWindow IDM_CRSR_WINDOW 19 225 300 150
-ShowWindow IDM_CRSR_WINDOW SW_SHOW
+MoveWindow IDM_CRSR_WINDOW 837 288 300 150
+ShowWindow IDM_CRSR_WINDOW SW_HIDE
 MoveWindow IDM_STAT_WINDOW 12 404 400 430
-ShowWindow IDM_STAT_WINDOW SW_SHOW
-MoveWindow IDM_PERF_WINDOW 25 55 300 150
-ShowWindow IDM_PERF_WINDOW SW_SHOW
-MoveWindow IDM_MINI_WINDOW 1686 52 216 139
-ShowWindow IDM_MINI_WINDOW SW_SHOW
-MoveWindow IDM_STATUS_BAR 0 1018 1920 22
+ShowWindow IDM_STAT_WINDOW SW_HIDE
+MoveWindow IDM_PERF_WINDOW 838 103 300 150
+ShowWindow IDM_PERF_WINDOW SW_HIDE
+MoveWindow IDM_MINI_WINDOW 0 0 0 0
+ShowWindow IDM_MINI_WINDOW SW_HIDE
+MoveWindow IDM_STATUS_BAR 607 979 1280 22
 ShowWindow IDM_STATUS_BAR SW_SHOW
