--- a/History/History.vcxproj.filters
+++ b/History/History.vcxproj.filters
@@ -59,5 +59,8 @@
     <ClCompile Include="HistorySystem.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="HistoryGeneration.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
