--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -194,6 +194,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="EvoController.h" />
     <ClInclude Include="Evolution.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
@@ -208,6 +209,7 @@
     <ClInclude Include="win32_frameBuffer.h" />
     <ClInclude Include="win32_gridWindow.h" />
     <ClInclude Include="win32_focusPoint.h" />
+    <ClInclude Include="win32_histWorkerThread.h" />
     <ClInclude Include="win32_histWrappers.h" />
     <ClInclude Include="win32_statistics.h" />
     <ClInclude Include="win32_status.h" />
@@ -215,6 +217,7 @@
     <ClInclude Include="win32_wrappers.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EvoController.cpp" />
     <ClCompile Include="Evolution.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -229,8 +232,10 @@
     <ClCompile Include="win32_draw.cpp" />
     <ClCompile Include="win32_editor.cpp" />
     <ClCompile Include="win32_editorWrappers.cpp" />
+    <ClCompile Include="win32_evoHistWindow.cpp" />
     <ClCompile Include="win32_frameBuffer.cpp" />
     <ClCompile Include="win32_gridWindow.cpp" />
+    <ClCompile Include="win32_histWorkerThread.cpp" />
     <ClCompile Include="win32_histWrappers.cpp" />
     <ClCompile Include="win32_statistics.cpp" />
     <ClCompile Include="win32_status.cpp" />
