--- a/Evolution/Evolution.vcxproj.filters
+++ b/Evolution/Evolution.vcxproj.filters
@@ -140,6 +140,9 @@
     <ClCompile Include="win32_evoHistWindow.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
+    <ClCompile Include="win32_focusPoint.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Evolution.rc">
