--- a/Evolution/Evolution.vcxproj
+++ b/Evolution/Evolution.vcxproj
@@ -206,6 +206,7 @@
     <ClInclude Include="win32_draw.h" />
     <ClInclude Include="win32_editor.h" />
     <ClInclude Include="win32_editorWrappers.h" />
+    <ClInclude Include="win32_evoHistWindow.h" />
     <ClInclude Include="win32_frameBuffer.h" />
     <ClInclude Include="win32_gridWindow.h" />
     <ClInclude Include="win32_focusPoint.h" />
