--- a/Evolution/WindowConfiguration1.cnf
+++ b/Evolution/WindowConfiguration1.cnf
@@ -11,7 +11,7 @@ ShowWindow IDM_EDIT_WINDOW SW_SHOW
 MoveWindow IDM_CRSR_WINDOW 837 288 300 150
 ShowWindow IDM_CRSR_WINDOW SW_HIDE
 MoveWindow IDM_STAT_WINDOW 12 404 400 430
-ShowWindow IDM_STAT_WINDOW SW_HIDE
+ShowWindow IDM_STAT_WINDOW SW_SHOW
 MoveWindow IDM_PERF_WINDOW 838 103 300 150
 ShowWindow IDM_PERF_WINDOW SW_HIDE
 MoveWindow IDM_MINI_WINDOW 0 0 0 0
