--- a/EvoHistGlue/EvoHistGlue.vcxproj
+++ b/EvoHistGlue/EvoHistGlue.vcxproj
@@ -72,15 +72,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
+    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
+    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
+    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)Evolution;$(SolutionDir)Utilities;$(SolutionDir)Win32_utilities;$(SolutionDir)Win32_history;$(SolutionDir)EvolutionCoreInterface;$(SolutionDir)HistoryInterface;$(IncludePath)</IncludePath>
+    <CodeAnalysisRuleSet>NativeRecommendedRules.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
