Compare CPP compiles

--- a/Evolution/WindowConfiguration1.cnf
+++ b/Evolution/WindowConfiguration1.cnf
@@ -1,20 +1,20 @@
-MoveWindow IDM_HIST_WINDOW 537 977 1374 30
+MoveWindow IDM_HIST_WINDOW 0 988 1920 30
 ShowWindow IDM_HIST_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_MAIN_WINDOW 537 54 1374 923
+MoveWindow IDM_MAIN_WINDOW 0 43 1920 945
 ShowWindow IDM_MAIN_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_APPL_WINDOW 529 3 1390 1034
-ShowWindow IDM_APPL_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_DISP_WINDOW 1702 187 211 219
+MoveWindow IDM_APPL_WINDOW -8 -8 1936 1056
+ShowWindow IDM_APPL_WINDOW SW_MAXIMIZE
+MoveWindow IDM_DISP_WINDOW 1708 195 211 219
 ShowWindow IDM_DISP_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_EDIT_WINDOW 1707 408 211 559
 ShowWindow IDM_EDIT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_CRSR_WINDOW 542 68 300 150
+MoveWindow IDM_CRSR_WINDOW 16 228 300 150
 ShowWindow IDM_CRSR_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STAT_WINDOW 554 502 400 430
+MoveWindow IDM_STAT_WINDOW 5 475 400 430
 ShowWindow IDM_STAT_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_PERF_WINDOW 0 0 0 0
+MoveWindow IDM_PERF_WINDOW 16 81 260 120
 ShowWindow IDM_PERF_WINDOW SW_SHOWNORMAL
 MoveWindow IDM_MINI_WINDOW 1705 60 216 139
 ShowWindow IDM_MINI_WINDOW SW_SHOWNORMAL
-MoveWindow IDM_STATUS_BAR 537 1007 1374 22
+MoveWindow IDM_STATUS_BAR 0 1018 1920 22
 ShowWindow IDM_STATUS_BAR SW_SHOWNORMAL
