--- a/Compare/Compare.vcxproj
+++ b/Compare/Compare.vcxproj
@@ -148,19 +148,22 @@
   <ItemGroup>
     <ClInclude Include="negList.h" />
     <ClInclude Include="output.h" />
+    <ClInclude Include="RTF_output.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
+    <ClInclude Include="text_output.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Compare.cpp" />
     <ClCompile Include="negList.cpp" />
-    <ClCompile Include="output.cpp" />
+    <ClCompile Include="RTF_output.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="text_output.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
